Fix spacing and link jump

--- a/src/assets/scss/_overrides.scss
+++ b/src/assets/scss/_overrides.scss
@@ -106,6 +106,7 @@ $input-font-size-sm: $font-size-base;
 
 $custom-select-border-width: 0;
 $form-group-margin-bottom: 10px;
+$label-margin-bottom: 0;
 
 $wrapper-padding: 20px;
 
